# file_repository

./: .gitignore  LICENSE  README.md
llm/journey_icons/descriptions/: all_icons.md
llm/journey_icons/icon_matcher/: pyproject.toml
llm/journey_icons/icon_matcher/icon_matcher/: icon_matcher.py  icons.yaml  templates.json  templates_new.json
llm/journey_icons/icon_matcher/json_structured/: json_structured.py
llm/journey_prompts/: role_seeker.txt  simple_role_seeker.txt
llm/journey_structures_json/: convert.js  get_actions.js  knowledge_services_roles.json  matched_descriptions.json  templates.json
llm/journey_structures_json/structured/: index.json  mappings.json
llm/journey_structures_json/structured/engineering_development/: data_scientist.json  qa_engineer.json  (+3 more)
llm/journey_structures_yaml/: descriptions.txt  extract_descriptions.js  extract_types_prompt.txt  knowledge_roles.yaml  templates.yaml
llm/journey_structures_yaml/logo_tmp/: task_types.yaml
llm/prompt_generator_templates/: desc.yaml  hr_rep-values.yaml  sales_rep-products.yaml  teacher-class_curriculum.yaml
scripts/helpers/: pyproject.toml  update_taxonomy.py
scripts/llm_helpers/files/: icons.yaml  knowledge_services_roles.json  structured  templates.json
scripts/llm_helpers/icon_matcher/: icon_matcher.py
scripts/llm_helpers/json_structured/: json_structured.py
taxonomy/: missing.txt  news-ed.yaml  news.yaml
test_content/docs/: CircleBack.md  Hydroware.txt  thirdcognition.txt  thirdcognition_x4.txt
test_content/job_descriptions/: marketing_manager.txt  matched_descriptions.yaml
(+15 files in other folders)
